# kaft

./: .gitignore  LICENSE.txt  README.md  README_pypi.md  pyproject.toml
experiments/: exp_2d_topology_map.py  exp_arxiv_softmax_vs_fr.py  exp_compare_simulators.py  exp_geodesic.py  exp_geomstat_compare.py  exp_ingest_arvix.py  exp_maxwell_demo.py  exp_maxwell_falt_vs_curved.py  exp_metric_ablation.py  exp_simulation.py  exp_test_bregman.py  exp_test_geodesic.py  exp_test_gradient_flow.py  exp_test_seeder.py  exp_test_transport.py  exp_test_wave.py  geometric_dynamics.py  geometric_state_arxiv.json  test_base.py  test_classical.py  test_contracts.py  test_fisherrao.py  test_information.py  test_phase4_information.py  test_registry.py  test_registry_full.py  test_remaining.py  test_remaining_contracts.py
experiments/seeds/: test_corpus.json
kaft/: __init__.py
kaft/compress/: __init__.py
kaft/core/: __init__.py  manifold.py  metric.py  resonance.py  topology.py
kaft/dynamics/: __init__.py  gradient_flow.py  jordan.py  kaft_source.py  kstate.py  metric_evolution.py  resonance.py  softmax_dynamics.py  transport.py  wave.py
kaft/geometry/: __init__.py  base.py  classical.py  divergences.py  information.py
kaft/ingest/: __init__.py  embedder.py  router.py
kaft/navigate/: __init__.py  geodesic.py  seeder.py
kaft/simulate/: __init__.py  base.py  (+9 more)
notebook/: 01_geometry_survey.ipynb  02_wave_propagation.ipynb  03_demo_notebook.ipynb
output/: geometric_state.json
tests/: conftest.py  test_dynamics.py  test_geometry.py  test_navigate.py  test_simulate.py
(+27 files in other folders)
